agrege iamgenes de gmal al index

--- a/index.html
+++ b/index.html
@@ -19,9 +19,29 @@
                 <a class="nav-link" href="#">USUARIO</a>
             </li>
             <li class="nav-item">
-<a class="nav-link" href="#">PRACTICA </a>
+                <a class="nav-link" href="#">PRACTICA </a>
             </li>
         </ul>
     </nav>
+<div class="container-sm-md-lg-lx"><!--Contenedor principal-->
+    <div class="bg-warning" style="width:85%; margin:auto"><!-- contendedor secundario-->
+        <img src="IMAGENES/1.png" alt="" width="45%" style="float: left">
+        <p>Al tener Google, necesitamos tener una cuenta de gmail, entonces les esñare como crear una, a nuestra izquierda vemos lo primero </p>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="bg-warning" style="width:85%; margin:auto">
+        <img src="IMAGENES/2.png" alt="" width="45%" style="float:left">
+        <p>Para iniciar secion tenemos que picar al boton azul que se muestra en pantalla, que significa "Iniciar sesion"</p>
+    </div>><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="bg-warning" style="width:85%; margin:auto">
+        <img src="IMAGENES/3.png" alt="" width="45%" style="float:left">
+        <p>Al darle click nos mostrara la siguiente venta que se encuntra a la izquerda, le tenemos que dar "Crear cuenta"</p>
+    </div>><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="bg-warning" style="width:85%; margin:auto">
+         <img src="IMAGENES/4.png" alt="" width="45%" style="float:left">
+    </div>><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="bg-warning" style="">
+
+    </div>
+</div><!--contenedor principal cierre-->
 </body>
 </html> 
